adding comments to weatherPy

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -817,8 +817,7 @@
    ],
    "source": [
     "hotel_df = vacay_df\n",
-    "hotel_df[\"Hotel Name\"]=\"\"\n",
-    "hotel_df"
+    "hotel_df[\"Hotel Name\"]=\"\"\n"
    ]
   },
   {
@@ -1162,6 +1161,15 @@
     "fig\n",
     "\n",
     "# Display figure\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig\n"
    ]
   },
   {
