adding comments/findings on weather plots

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -22,6 +22,7 @@
     "import numpy as np\n",
     "import requests\n",
     "import time\n",
+    "from datetime import date\n",
     "from scipy.stats import linregress\n",
     "\n",
     "# Import API key\n",
@@ -1328,11 +1329,7 @@
     }
    ],
    "source": [
-    "#sorted(city_df.Max_Temp.unique())  todo delete me test box\n",
-    "city_df.Max_Temp.value_counts()\n",
-    "\n",
-    "#need this stuff to be somewhere\n",
-    "from datetime import date\n",
+    "#save the date this is run to be used in the graph titles\n",
     "api_run_date = date.today().strftime(\"%b-%d-%Y\")\n",
     "\n",
     "print(api_run_date)"
@@ -1407,8 +1404,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lat vs Temp shows as you get closer to the equator (Lat 0) temp goes up.  As you travel north (positive latitude) temp goes down.  Nothern hemiphere, currently in winter, shows lower max temps as you go north away from the equator.\n",
-    "#todo After each plot, add a sentence or two explaining what the code is analyzing."
+    "Lat vs Temp shows as you get closer to the equator (Lat 0) temp goes up.  As you travel north (positive latitude) temp goes down.  Nothern hemiphere, currently in winter, shows lower max temps as you go north away from the equator."
    ]
   },
   {
@@ -1451,7 +1447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Latitide vs Humidity shows no strong correlation."
+    "Latitide vs Humidity shows no strong correlation.  Would need to do more research to determine what attribute of a location  correlates with humidity levels."
    ]
   },
   {
@@ -1494,7 +1490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Latitude vs Cloudiness shows no real correlation between the 2."
+    "Latitude vs Cloudiness shows no real correlation between the 2.  Values grouping along whole numbers could be due to less perfect scientific method of gathering \"cloudiness\" data.  I wasn't able to determine the exact method used to determine this value by weather stations, but it appears rounding to whole numbers is common.  "
    ]
   },
   {
@@ -1537,7 +1533,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graphing Latitude vs Wind Speed shows scattering values with not dependency between the two."
+    "Graphing Latitude vs Wind Speed shows scattering values with no dependency between the two.  Would need further research to determine if there were aspects of location that affect wind speed (altitude? proximity to change in geography like mountain or ocean?)"
    ]
   },
   {
@@ -1676,8 +1672,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plot shows a less strong temp to latitude correlation when compared to the northern hemisphere cities (.86 vs .47)\n",
-    "There's a decent positive correlation in the southern hemisphere as you travel towards the equator the temperature rises.  TODO fix this... "
+    "Plot shows a less strong temp to latitude correlation when compared to the northern hemisphere cities (.47 vs .87)\n",
+    "There's some positive correlation in the southern hemisphere as you travel towards the equator the temperature rises.  This hemisphere's data shows more variance than the northern hemisphere data. While developing this notebook, multiple runs of random datasets gave norther hemisphere rvalues in .8X range, however southern hemisphere data has varied from .4X to .6X."
    ]
   },
   {
@@ -1734,12 +1730,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#todo comments ehre"
+    "Weak positive correlation shown in this graph.   Slightly higher r value compared with the southern hemisphere"
    ]
   },
   {
@@ -1798,12 +1792,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#todo comment here"
+    "Weak positive correlation show between southern latitude and humidity."
    ]
   },
   {
@@ -1860,12 +1852,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#todo comments here"
+    "When separated in to north and south, there is _extremely_ weak correlation between latitude and cloudiness. R value .1X for both hemispheres."
    ]
   },
   {
@@ -1923,12 +1913,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#todo comments here\n"
+    "Would need to do further research on if a location attribute beyond latitude would show a correlation to cloudiness.\n"
    ]
   },
   {
@@ -2049,7 +2037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "todo put comments here"
+    "Southern latitude vs. wind seems to show a weak negative correlation. I'm not sure this is a true correlation or just a trick of the data on this particular day.  Would need to do more research."
    ]
   },
   {
