cleaned up/added comments to weatherpy.  ran vacationpy through. adjusted point radius value.  updated readme.  added heatmap screenshots

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -257,13 +257,13 @@
        "[545 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read the mouse data and the study results\n",
+    "# Read the city weather data in\n",
     "weather_df = pd.read_csv('../output_data/cities.csv') \n",
     "weather_df"
    ]
@@ -280,31 +280,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "545\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "locations=weather_df[[\"Lat\",\"Lng\"]]\n",
-    "weight=weather_df.Humidity\n"
+    "weight=weather_df.Humidity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd588b64c21a4f7db3d8d6aff904a9b9",
+       "model_id": "08ac47da4466413aa8dcefc1566e4ea1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -320,7 +312,7 @@
     "fig = gmaps.figure(center=(46.0, -5.0), zoom_level=2) #set center/zoom so the map isn't huge and repeated on the page\n",
     "\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=weight, dissipating=False, max_intensity=100\n",
-    "                                 ,point_radius=1)  # point radius how big shape around \n",
+    "                                 ,point_radius=3)  # point radius how big shape around tried with values 1 and 3\n",
     "\n",
     "fig.add_layer(heat_layer)\n",
     "\n",
@@ -338,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +557,7 @@
        "543   13.4000     68.47        1.12  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +568,8 @@
     "vacay_temp_max = 80\n",
     "vacay_temp_min = 20\n",
     "vacay_df = weather_df.loc[(weather_df.Humidity<vacay_humidity_limit)&(weather_df.Max_Temp<=vacay_temp_max)&(weather_df.Max_Temp>vacay_temp_min)]\n",
-    "#no need to drop null rows as that was done when building the weather df orifinally.\n",
+    "#no need to drop null rows as that was done when building the weather df originally.\n",
+    "#vacation list includes 12 cities, a few extra to \n",
     "vacay_df"
    ]
   },
@@ -595,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -618,16 +611,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kunaual\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\indexing.py:966: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Issue with response for city bilma. API status: ZERO_RESULTS\n"
+      "Issue API with response for city: bilma. API status: ZERO_RESULTS\n",
+      "Issue API with response for city: araouane. API status: ZERO_RESULTS\n",
+      "Issue API with response for city: dakoro. API status: ZERO_RESULTS\n",
+      "Issue API with response for city: koulikoro. API status: ZERO_RESULTS\n",
+      "Issue API with response for city: tessalit. API status: ZERO_RESULTS\n",
+      "Issue API with response for city: beboto. API status: ZERO_RESULTS\n"
      ]
     },
     {
@@ -775,7 +785,7 @@
        "      <td>-104.4167</td>\n",
        "      <td>69.80</td>\n",
        "      <td>9.22</td>\n",
-       "      <td></td>\n",
+       "      <td>Riata Inn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>397</th>\n",
@@ -817,7 +827,7 @@
        "      <td>11.3667</td>\n",
        "      <td>72.39</td>\n",
        "      <td>4.03</td>\n",
-       "      <td></td>\n",
+       "      <td>Shield Hotel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>543</th>\n",
@@ -831,7 +841,7 @@
        "      <td>13.4000</td>\n",
        "      <td>68.47</td>\n",
        "      <td>1.12</td>\n",
-       "      <td></td>\n",
+       "      <td>Hôtel la Tour d'argent</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -852,22 +862,22 @@
        "510      510      jalingo          14      NG  1613008883        18   8.8833   \n",
        "543      543       garoua          92      CM  1613009189        20   9.3000   \n",
        "\n",
-       "          Lng  Max_Temp  Wind_Speed      Hotel Name  \n",
-       "40     4.3792     71.26        8.08  Jega Guest Inn  \n",
-       "62  -108.2803     51.80        6.91     Quality Inn  \n",
-       "100   -6.8926     72.68        3.40     Hotel Dakan  \n",
-       "122   12.9164     66.27        6.44                  \n",
-       "206   -3.5265     68.22       10.42                  \n",
-       "296    6.7650     66.88       10.31                  \n",
-       "333   -7.7500     73.11        8.19                  \n",
-       "363 -104.4167     69.80        9.22                  \n",
-       "397    1.0114     65.79        9.53                  \n",
-       "427   16.9390     68.38        3.20                  \n",
-       "510   11.3667     72.39        4.03                  \n",
-       "543   13.4000     68.47        1.12                  "
+       "          Lng  Max_Temp  Wind_Speed              Hotel Name  \n",
+       "40     4.3792     71.26        8.08          Jega Guest Inn  \n",
+       "62  -108.2803     51.80        6.91             Quality Inn  \n",
+       "100   -6.8926     72.68        3.40             Hotel Dakan  \n",
+       "122   12.9164     66.27        6.44                          \n",
+       "206   -3.5265     68.22       10.42                          \n",
+       "296    6.7650     66.88       10.31                          \n",
+       "333   -7.7500     73.11        8.19                          \n",
+       "363 -104.4167     69.80        9.22               Riata Inn  \n",
+       "397    1.0114     65.79        9.53                          \n",
+       "427   16.9390     68.38        3.20                          \n",
+       "510   11.3667     72.39        4.03            Shield Hotel  \n",
+       "543   13.4000     68.47        1.12  Hôtel la Tour d'argent  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,8 +892,8 @@
     "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
     "\n",
     "for index,row in hotel_df.iterrows():\n",
-    "    if row[\"City_ID\"]==206:\n",
-    "        break   #test break to just call api 1x\n",
+    "    #if row[\"City_ID\"]==206:\n",
+    "    #    break   #test break to just call api few times\n",
     "    lat = row[\"Lat\"]\n",
     "    lng = row[\"Lng\"]\n",
     "    #print(row)\n",
@@ -900,32 +910,121 @@
     "    #print(json.dumps(hotel_resp[\"results\"], indent=4))\n",
     "    #possible functionality upgrade for next iteration: add loop through response to check business_status == \"OPERATIONAL\"\n",
     "    \n",
-    "hotel_df    "
+    "hotel_df\n",
+    "#some hotels not found for the city.  The goal of this code was to find between 1 and 10 cities with hotels, 6 were found.\n",
+    "#if needed to get more results a few other things could be tried: could widen the radius (current search is only within 5km), could remove 'hotel' keyword and search just by type \"lodging\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>jega</td>\n",
+       "      <td>NG</td>\n",
+       "      <td>12.2175</td>\n",
+       "      <td>4.3792</td>\n",
+       "      <td>Jega Guest Inn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>silver city</td>\n",
+       "      <td>US</td>\n",
+       "      <td>32.7701</td>\n",
+       "      <td>-108.2803</td>\n",
+       "      <td>Quality Inn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>kolondieba</td>\n",
+       "      <td>ML</td>\n",
+       "      <td>11.0882</td>\n",
+       "      <td>-6.8926</td>\n",
+       "      <td>Hotel Dakan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>363</th>\n",
+       "      <td>ojinaga</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>29.5667</td>\n",
+       "      <td>-104.4167</td>\n",
+       "      <td>Riata Inn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>jalingo</td>\n",
+       "      <td>NG</td>\n",
+       "      <td>8.8833</td>\n",
+       "      <td>11.3667</td>\n",
+       "      <td>Shield Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>garoua</td>\n",
+       "      <td>CM</td>\n",
+       "      <td>9.3000</td>\n",
+       "      <td>13.4000</td>\n",
+       "      <td>Hôtel la Tour d'argent</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "{'html_attributions': [], 'results': [], 'status': 'ZERO_RESULTS'}"
+       "            City Country  Latitude  Longitude              Hotel Name\n",
+       "40          jega      NG   12.2175     4.3792          Jega Guest Inn\n",
+       "62   silver city      US   32.7701  -108.2803             Quality Inn\n",
+       "100   kolondieba      ML   11.0882    -6.8926             Hotel Dakan\n",
+       "363      ojinaga      MX   29.5667  -104.4167               Riata Inn\n",
+       "510      jalingo      NG    8.8833    11.3667            Shield Hotel\n",
+       "543       garoua      CM    9.3000    13.4000  Hôtel la Tour d'argent"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hotel_resp"
+    "#Dataframe 10 rows or less of City + Hotel information\n",
+    "pinHotels_df = hotel_df.loc[hotel_df[\"Hotel Name\"]!=\"\"][[\"City\",\"Country\",\"Lat\",\"Lng\",\"Hotel Name\"]]\n",
+    "pinHotels_df.rename(columns = {\"Lat\":\"Latitude\", \"Lng\":\"Longitude\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,19 +1040,19 @@
     "\"\"\"\n",
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+    "hotel_info = [info_box_template.format(**row) for index, row in pinHotels_df.iterrows()]\n",
+    "locations = pinHotels_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd588b64c21a4f7db3d8d6aff904a9b9",
+       "model_id": "08ac47da4466413aa8dcefc1566e4ea1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -967,7 +1066,7 @@
    ],
    "source": [
     "# Add marker layer ontop of heat map\n",
-    "marker_locations = hotel_df[['Lat', 'Lng']] \n",
+    "marker_locations = pinHotels_df[['Lat', 'Lng']] \n",
     "\n",
     "# Create a marker_layer using the poverty list to fill the info box\n",
     "markers = gmaps.marker_layer(marker_locations,\n",
