--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -904,7 +904,7 @@
     "count=0\n",
     "for city in cities:\n",
     "\n",
-    "    #todo if need different unit of measure on temp need to update the url\n",
+    "    #todo if need different unit of measure on temp need to update the units passed to the url\n",
     "    weather_url = f'https://api.openweathermap.org/data/2.5/weather?q={city}&units=imperial&appid={weather_api_key}'\n",
     "\n",
     "\n",
@@ -1143,7 +1143,7 @@
     }
    ],
    "source": [
-    "backupcity_df=city_df  #todo if everything works can delete this\n",
+    "backupcity_df=city_df  #just in case\n",
     "backupcity_df.shape"
    ]
   },
@@ -1390,7 +1390,7 @@
     "cityLats = city_df.Lat\n",
     "cityMaxTemps = city_df.Max_Temp\n",
     "plt.scatter(cityLats,cityMaxTemps,marker=\"o\",edgecolors=\"black\", facecolors=\"cornflowerblue\")\n",
-    "plt.title(f\"City Latitude vs. Max Temp (Weather API data gathered:{api_run_date})\")  #todo add date to title of plots\n",
+    "plt.title(f\"City Latitude vs. Max Temp (Weather API data gathered:{api_run_date})\")  \n",
     "plt.xlabel(\"City Latitude\")\n",
     "plt.ylabel(\"Max Temp (F)\")\n",
     "plt.grid(True)\n",
@@ -1490,7 +1490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Latitude vs Cloudiness shows no real correlation between the 2.  Values grouping along whole numbers could be due to less perfect scientific method of gathering \"cloudiness\" data.  I wasn't able to determine the exact method used to determine this value by weather stations, but it appears rounding to whole numbers is common.  "
+    "Latitude vs Cloudiness shows no real correlation between the two.  Values grouping along whole numbers could be due to less perfect scientific method of gathering \"cloudiness\" data.  I wasn't able to determine the exact method used to determine the value by weather stations, but the data shows rounding to whole numbers is common.  "
    ]
   },
   {
@@ -1795,7 +1795,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Weak positive correlation show between southern latitude and humidity."
+    "Weak positive correlation show between southern latitude and humidity.  As noted in the Humidity graph containing both hemispheres, would need to do further research to determine a different attribute that more strongly correlates to humidity."
    ]
   },
   {
@@ -2037,7 +2037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Southern latitude vs. wind seems to show a weak negative correlation. I'm not sure this is a true correlation or just a trick of the data on this particular day.  Would need to do more research."
+    "Southern latitude vs. wind seems to show a weak negative correlation. This is not a reproducible correlation, other runs of data returned pvalues like -.10"
    ]
   },
   {
